--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trafficlight",
   "version": "0.0.0",
-  "description": "React based traffic light goodness",
+  "description": "React based traffic light panel for Grafana",
   "scripts": {
     "build": "webpack -c ./.config/webpack/webpack.config.ts --env production",
     "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
