--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
     "test": "jest --watch --onlyChanged",
     "test:ci": "jest --passWithNoTests --maxWorkers 4",
+    "test:playwright": "playwright test",
     "typecheck": "tsc --noEmit",
     "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "npm run lint -- --fix",
@@ -22,7 +23,9 @@
     "@grafana/e2e": "9.5.3",
     "@grafana/e2e-selectors": "9.5.3",
     "@grafana/eslint-config": "^6.0.0",
+    "@grafana/plugin-e2e": "^0.12.0",
     "@grafana/tsconfig": "^1.2.0-rc1",
+    "@playwright/test": "^1.41.2",
     "@swc/core": "^1.3.90",
     "@swc/helpers": "^0.5.0",
     "@swc/jest": "^0.2.26",
