--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Check for E2E
         id: check-for-e2e
         run: |
-          if [ -d "cypress" ]
+          if [ -d "playwright" ]
           then
             echo "has-e2e=true" >> $GITHUB_OUTPUT
           fi
@@ -77,7 +77,7 @@ jobs:
 
       - name: Run e2e tests
         if: steps.check-for-e2e.outputs.has-e2e == 'true'
-        run: npm run e2e
+        run: npm run test:playwright
 
       - name: Stop grafana docker
         if: steps.check-for-e2e.outputs.has-e2e == 'true'
@@ -87,8 +87,8 @@ jobs:
         uses: actions/upload-artifact@v4
         if: steps.check-for-e2e.outputs.has-e2e == 'true' && steps.run-e2e-tests.outcome != 'success'
         with:
-          name: cypress-videos
-          path: cypress/videos
+          name: playwright-report
+          path: playwright-report/
           retention-days: 5
 
       - name: Sign plugin
