--- a/.github/workflows/create-plugin-update.yml
+++ b/.github/workflows/create-plugin-update.yml
@@ -15,9 +15,9 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Get current version of the package
-        id: get-current-version
-        run: echo "CURRENT_VERSION=$(npx @grafana/create-plugin@latest --version)" >> $GITHUB_OUTPUT
+      - name: Get latest version of the package
+        id: get-latest-version
+        run: echo "LATEST_VERSION=$(npx -y @grafana/create-plugin@latest version)" >> "$GITHUB_ENV"
 
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -26,12 +26,12 @@ jobs:
         id: get-config-version
         run: |
           CONFIG_VERSION=$(jq -r '.version' .config/.cprc.json)
-          echo "CONFIG_VERSION=${CONFIG_VERSION}" >> $GITHUB_OUTPUT
+          echo "CONFIG_VERSION=${CONFIG_VERSION}" >> "$GITHUB_ENV"
 
       - name: Compare versions
         id: compare-versions
         run: |
-          if [ "$CURRENT_VERSION" != "$CONFIG_VERSION" ]; then
+          if [ "$LATEST_VERSION" != "$CONFIG_VERSION" ]; then
             echo "update_needed=true" >> $GITHUB_OUTPUT
           else
             echo "update_needed=false" >> $GITHUB_OUTPUT
@@ -48,16 +48,16 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
           # Create a new branch for the update
-          git checkout -b update-grafana-plugin-${CURRENT_VERSION}
+          git checkout -b update-grafana-plugin-${LATEST_VERSION}
 
           # Commit the changes
           git add .
-          git commit -m "Update Grafana plugin to version $CURRENT_VERSION"
+          git commit -m "Update Grafana plugin to version $LATEST_VERSION"
 
           # Push the branch
-          git push origin update-grafana-plugin-${CURRENT_VERSION}
+          git push origin update-grafana-plugin-${LATEST_VERSION}
 
           # Create a pull request
-          gh pr create --title "Update Grafana Plugin to $CURRENT_VERSION" --body "This PR updates the Grafana plugin to version $CURRENT_VERSION. Please check the changes thoroughly before merging."
+          gh pr create --title "Update Grafana Plugin to $LATEST_VERSION" --body "This PR updates the Grafana plugin to version $LATEST_VERSION. Please check the changes thoroughly before merging."
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT_TOKEN }}
