--- a/.github/workflows/create-plugin-update.yml
+++ b/.github/workflows/create-plugin-update.yml
@@ -44,8 +44,8 @@ jobs:
           npx @grafana/create-plugin update
 
           # Configure Git user
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "jackw"
+          git config user.email "73201+jackw@users.noreply.github.com"
 
           # Create a new branch for the update
           git checkout -b update-grafana-plugin-${LATEST_VERSION}
