--- a/.github/workflows/create-plugin-update.yml
+++ b/.github/workflows/create-plugin-update.yml
@@ -49,10 +49,10 @@ jobs:
         if: steps.compare-versions.outputs.update_needed == 'true'
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: update-grafana-create-plugin-${{ LATEST_VERSION }}
+          branch: update-grafana-create-plugin-${{ env.LATEST_VERSION }}
           delete-branch: true
-          commit-message: 'chore: run create-plugin update for version $LATEST_VERSION [skip-ci]'
-          title: 'Update Grafana Create Plugin configs to $LATEST_VERSION'
+          commit-message: 'chore: run create-plugin update for version ${{ env.LATEST_VERSION }} [skip-ci]'
+          title: 'Update Grafana Create Plugin configs to ${{ env.LATEST_VERSION }}'
           author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           body: |
             This PR updates the Grafana create-plugin configurations to version $LATEST_VERSION.
