--- a/.github/workflows/create-plugin-update.yml
+++ b/.github/workflows/create-plugin-update.yml
@@ -48,7 +48,7 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         if: steps.compare-versions.outputs.update_needed == 'true'
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_PAT_TOKEN }}
           branch: update-grafana-create-plugin-${{ env.LATEST_VERSION }}
           delete-branch: true
           commit-message: 'chore: run create-plugin update for version ${{ env.LATEST_VERSION }} [skip-ci]'
