Revert "ci(cp-update): move to using auto token auth for workflow"
This reverts commit 4b9abec10893aa166fa2701d00085e1f720e3353.

--- a/.github/workflows/create-plugin-update.yml
+++ b/.github/workflows/create-plugin-update.yml
@@ -8,10 +8,6 @@ on:
 jobs:
   check_for_updates:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      issues: write
-      pull-requests: write
 
     steps:
       - name: Setup Node.js
@@ -25,6 +21,8 @@ jobs:
 
       - name: Checkout Repository
         uses: actions/checkout@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT_TOKEN }}
 
       - name: Get version from .config/.cprc.json
         id: get-config-version
@@ -51,7 +49,7 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         if: steps.compare-versions.outputs.update_needed == 'true'
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_PAT_TOKEN }}
           branch: update-grafana-create-plugin
           delete-branch: true
           commit-message: 'chore: update configuration to create-plugin ${{ env.LATEST_VERSION }}'
