--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Start grafana docker
         if: steps.check-for-e2e.outputs.has-e2e == 'true'
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Wait for grafana server
         if: steps.check-for-e2e.outputs.has-e2e == 'true'
@@ -94,7 +94,7 @@ jobs:
 
       - name: Stop grafana docker
         if: steps.check-for-e2e.outputs.has-e2e == 'true'
-        run: docker-compose down
+        run: docker compose down
 
       - name: Archive E2E output
         uses: actions/upload-artifact@v4
