--- a/.github/workflows/create-plugin-update.yml
+++ b/.github/workflows/create-plugin-update.yml
@@ -5,10 +5,13 @@ on:
   schedule:
     - cron: '0 0 * * *'
 
+# necessary to create pull requests
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - uses: grafana/plugin-actions/create-plugin-update@jackw/create-plugin-update
-        with:
-          token: ${{ secrets.GH_PAT_TOKEN }}
