--- a/.github/workflows/create-plugin-update.yml
+++ b/.github/workflows/create-plugin-update.yml
@@ -1,64 +1,26 @@
-name: Check and Update Create Plugin configs
+name: Create Plugin Update
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 1 * *' # run once a month on the 1st day
+
+# To use the default github token with the following elevated permissions make sure to check:
+# **Allow GitHub Actions to create and approve pull requests** in https://github.com/ORG_NAME/REPO_NAME/settings/actions.
+# Alternatively create a fine-grained personal access token for your repository with
+# `contents: read and write` and `pull requests: read and write` and pass it to the action.
+
+# permissions:
+#   contents: write
+#   pull-requests: write
 
 jobs:
-  check_for_updates:
+  release:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: grafana/plugin-actions/create-plugin-update@main
+        # Uncomment to use a fine-grained personal access token instead of default github token
+        # (For more info on how to generate the token see https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens)
         with:
-          node-version: '20'
-
-      - name: Get latest version of the package
-        id: get-latest-version
-        run: echo "LATEST_VERSION=$(npx -y @grafana/create-plugin@latest version)" >> "$GITHUB_ENV"
-
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT_TOKEN }}
-
-      - name: Get version from .config/.cprc.json
-        id: get-config-version
-        run: |
-          CONFIG_VERSION=$(jq -r '.version' .config/.cprc.json)
-          echo "CONFIG_VERSION=${CONFIG_VERSION}" >> "$GITHUB_ENV"
-
-      - name: Compare versions
-        id: compare-versions
-        run: |
-          if [ "$LATEST_VERSION" != "$CONFIG_VERSION" ]; then
-            echo "update_needed=true" >> $GITHUB_OUTPUT
-          else
-            echo "update_needed=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Update the configs
-        if: steps.compare-versions.outputs.update_needed == 'true'
-        run: |
-          npx -y @grafana/create-plugin@latest update
-          npm install
-
-      - name: Create PR
-        uses: peter-evans/create-pull-request@v6
-        if: steps.compare-versions.outputs.update_needed == 'true'
-        with:
+          # Make sure to save the token in your repository secrets
           token: ${{ secrets.GH_PAT_TOKEN }}
-          branch: update-grafana-create-plugin
-          delete-branch: true
-          commit-message: 'chore: update configuration to create-plugin ${{ env.LATEST_VERSION }}'
-          title: 'Chore: Bump @grafana/create-plugin configuration to ${{ env.LATEST_VERSION }}'
-          author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
-          body: |
-            Bumps [`@grafana/create-plugin`](https://github.com/grafana/plugin-tools/tree/main/packages/create-plugin) configuration from ${{ env.CONFIG_VERSION }} to ${{ env.LATEST_VERSION }}.
-
-            **Notes for reviewer:**
-            This is an auto-generated PR which ran `npx -y @grafana/create-plugin@latest update`.
-            Please consult the create-plugin [CHANGELOG.md](https://github.com/grafana/plugin-tools/blob/main/packages/create-plugin/CHANGELOG.md) to understand what may have changed.
-            Please review the changes thoroughly before merging.
