--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,8 @@ jobs:
       - name: Unit tests
         run: npm run test:ci
       - name: Build frontend
-        run: npm run build
+        # run: npm run build
+        run: npm run build -- --profile --json stats.json
 
       - name: Check for backend
         id: check-for-backend
@@ -108,6 +109,13 @@ jobs:
           name: ${{ steps.metadata.outputs.plugin-id }}-${{ steps.metadata.outputs.plugin-version }}
           path: ${{ steps.metadata.outputs.plugin-id }}
           retention-days: 5
+
+      - name: Upload stats.json artifact
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: actions/upload-artifact@v4
+        with:
+          name: main-branch-stats
+          path: stats.json
 
   resolve-versions:
     name: Resolve e2e images
