--- a/.github/workflows/bundle-size.yml
+++ b/.github/workflows/bundle-size.yml
@@ -19,3 +19,5 @@ jobs:
         uses: actions/checkout@v4
 
       - uses: grafana/plugin-actions/bundle-size@jackw/bundle-size-action
+        with:
+          threshold: '0'
