--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.194",
     "@types/node": "^20.8.7",
+    "@types/react-router-dom": "^5.2.0",
+    "@types/testing-library__jest-dom": "5.14.8",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "eslint-plugin-deprecation": "^2.0.0",
@@ -38,26 +40,25 @@
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "glob": "^10.2.7",
     "identity-obj-proxy": "3.0.0",
+    "imports-loader": "^5.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.7",
     "replace-in-file-webpack-plugin": "^1.0.6",
     "sass": "1.63.2",
     "sass-loader": "13.3.1",
+    "semver": "^7.6.3",
     "style-loader": "3.3.3",
     "swc-loader": "^0.2.3",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "5.5.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-livereload-plugin": "^3.0.2",
-    "@types/react-router-dom": "^5.2.0",
-    "@types/testing-library__jest-dom": "5.14.8",
-    "imports-loader": "^5.0.0",
-    "webpack-virtual-modules": "^0.6.2",
-    "terser-webpack-plugin": "^5.3.10",
-    "webpack-subresource-integrity": "^5.1.0"
+    "webpack-subresource-integrity": "^5.1.0",
+    "webpack-virtual-modules": "^0.6.2"
   },
   "engines": {
     "node": ">=16"
@@ -66,11 +67,11 @@
     "@emotion/css": "11.10.6",
     "@grafana/data": "^11.2.2",
     "@grafana/runtime": "^11.2.2",
+    "@grafana/schema": "^11.2.2",
     "@grafana/ui": "^11.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "2.5.3",
-    "@grafana/schema": "^11.2.2"
+    "tslib": "2.5.3"
   },
   "packageManager": "npm@9.5.1"
 }
