--- a/.github/workflows/bundle-size.yml
+++ b/.github/workflows/bundle-size.yml
@@ -1,9 +1,9 @@
 name: Bundle Stats
 
 on:
-  push:
-    # branches:
-    #   - main
+  pull_request:
+    branches:
+      - main
 
 permissions:
   contents: write
