--- a/package.json
+++ b/package.json
@@ -73,10 +73,10 @@
   },
   "dependencies": {
     "@emotion/css": "11.10.6",
-    "@grafana/data": "^11.5.3",
-    "@grafana/runtime": "^11.5.3",
-    "@grafana/schema": "^11.5.3",
-    "@grafana/ui": "^11.5.3",
+    "@grafana/data": "12.1.0-pre",
+    "@grafana/runtime": "12.1.0-pre",
+    "@grafana/schema": "12.1.0-pre",
+    "@grafana/ui": "12.1.0-pre",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "2.5.3"
