--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "React based traffic light panel for Grafana",
   "scripts": {
     "build": "webpack -c ./.config/webpack/webpack.config.ts --env production",
+    "build:stats": "webpack -c ./.config/webpack/webpack.config.ts --env production --profile --json stats.json",
     "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
     "e2e": "playwright test",
     "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
