--- a/.github/workflows/bundle-size.yml
+++ b/.github/workflows/bundle-size.yml
@@ -1,7 +1,11 @@
 name: Bundle Stats
 
 on:
+  workflow_dispatch:
   pull_request:
+    branches:
+      - main
+  push:
     branches:
       - main
 
@@ -18,4 +22,4 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - uses: grafana/plugin-actions/bundle-size@main
+      - uses: grafana/plugin-actions/bundle-size@bundle-size/v1.0.2
