ci(gh-workflows): fix docker logs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,7 +193,7 @@ jobs:
       - name: Docker logs
         if: ${{ always() && steps.run-tests.outcome == 'failure' }}
         run: |
-          docker logs myorg-ciupdate-panel >& grafana-server.log
+          docker logs heywesty-trafficlight-panel >& grafana-server.log
 
       - name: Stop grafana docker
         run: docker compose down
