--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "webpack -c ./.config/webpack/webpack.config.ts --env production",
     "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
     "e2e": "playwright test",
-    "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
+    "lint": "eslint --cache .",
     "lint:fix": "npm run lint -- --fix && prettier --write --list-different .",
     "server": "docker compose up --build",
     "sign": "npx --yes @grafana/sign-plugin@latest",
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@grafana/eslint-config": "^8.2.0",
-    "@grafana/plugin-e2e": "^2.1.13",
+    "@grafana/plugin-e2e": "^2.2.0",
     "@grafana/tsconfig": "^2.0.0",
     "@playwright/test": "^1.55.1",
     "@stylistic/eslint-plugin-ts": "^2.9.0",
@@ -37,14 +37,13 @@
     "@typescript-eslint/parser": "^8.3.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
-    "eslint": "^8.0.0",
+    "eslint": "^9.0.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-deprecation": "^2.0.0",
-    "eslint-plugin-jsdoc": "^46.8.0",
-    "eslint-plugin-react": "^7.33.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-jsdoc": "^51.2.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-webpack-plugin": "^4.0.1",
+    "eslint-webpack-plugin": "^5.0.0",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "glob": "^10.2.7",
     "identity-obj-proxy": "3.0.0",
@@ -74,13 +73,13 @@
   "dependencies": {
     "@emotion/css": "11.10.6",
     "@grafana/data": "^12.2.0",
+    "@grafana/i18n": "^12.2.0",
     "@grafana/runtime": "^12.2.0",
     "@grafana/schema": "^12.2.0",
     "@grafana/ui": "^12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "2.5.3",
-    "@grafana/i18n": "^12.2.0"
+    "tslib": "2.5.3"
   },
   "packageManager": "npm@9.5.1"
 }
